<resources>
    <string name="app_name">Drive Time Averages</string>
    <string name="action_settings">Settings</string>
    <string name="txtFinish">Finish Drive</string>
    <string name="title_activity_paths">PathsActivity</string>
    <string name="current_paths">Current Paths</string>
    <string name="path_remove">Remove</string>
    <string name="path_add">Add</string>
    <string name="total_possible_lights">Total Possible Lights</string>
    <string name="path_name">Path Name</string>
    <string name="most_recent_drive">Most Recent Drive</string>
    <string name="current_averages">Current Averages</string>
    <string name="title_activity_trips">TripsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_paths">Paths</string>
    <string name="title_trips">Trips</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
